# Swing-trader

./: .gitignore  cli.py  config.py  create_sample_data.py  dashboard.py  main.py  models.py  pyproject.toml  requirements.txt  results.xlsx  schemas.py
.streamlit/: config.toml
analysis/: fundamentals.py  institutional.py  sa_scoring.py  scoring.py  technicals.py
data/: excel_io.py  fintel.py  seekingalpha.py  yahoo.py
sample_data/: example_portfolio.xlsx
